# ViewKit

./: Cargo.toml  build.rs  cbindgen.toml  readme.md
docs/: kome.md
examples/: all.rs  border.rs  button.rs  scroll.rs  test.rs  text.rs  text_field.rs
lib/: Kome.toml
lib/include/: viewkit.h  viewkit_abi.h
lib/src/: lib.kome  view.kome
scripts/: fetch_resources.sh  generate-header.sh  generate.sh
src/: app.rs  draw_command.rs  edge_insets.rs  event.rs  ffi.rs  font.rs  geometry.rs  image.rs  layout.rs  lib.rs  prelude.rs  renderer.rs  state.rs  svg.rs  typography.rs  view.rs
src/app/: mod.rs  runtime.rs
src/components/: background.rs  button.rs  card.rs  divider.rs  group.rs  hstack.rs  icon.rs  image.rs  list.rs  menu.rs  mod.rs  overlay.rs  padding.rs  rectangle.rs  scroll.rs  segment_control.rs  spacer.rs  switch.rs  text.rs  text_field.rs  vstack.rs  zstack.rs
src/ffi/: components.toml  generated_components.rs  mod.rs  tree.rs
src/pipeline/: core.rs  dom.rs  layout.rs  mod.rs  parser.rs  style.rs
src/platform/: event.rs  font.rs  mod.rs  window.rs
src/platform/linux/: backend.rs  mod.rs  software_renderer.rs
src/platform/mochios/: mod.rs
src/runtime/: action.rs  adapter.rs  application.rs  builder.rs  id.rs  mod.rs  node.rs  runtime.rs  state.rs  view.rs  view_mode.rs
src/theme/: color.rs  divider.rs  mod.rs  radius.rs  scrollbar.rs  shadow.rs  spacing.rs  theme.rs
tests/: ffi.rs  runtime.rs
tools/ffi-gen/: Cargo.toml
tools/ffi-gen/src/: main.rs
