[package]
name = "viewkit"
description = "A UI kit for mochiOS"
keywords = ["uikit", "mochios", "viewkit", "ui", "kagami"]
categories = ["gui"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"
autoexamples = false

[dependencies]
bitflags = "2.13.0"
cosmic-text = "0.19.0"
slotmap = "1.1.1"
smallvec = "1.15.2"
smithay-client-toolkit = { version = "0.20.0", optional = true }
softbuffer = "0.4.8"
thiserror = "2.0.18"
tiny-skia = "0.12.0"
tracing = "0.1.44"
ui_layout = "0.9.8"
winit = "0.30.13"

[lib]
name = "viewkit"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[features]
wayland = ["smithay-client-toolkit"]

