[package]
name = "viewkit"
description = "A UI kit for mochiOS"
keywords = ["uikit", "mochios", "viewkit", "ui", "kagami"]
categories = ["gui"]
license = "Apache-2.0"
version = "0.3.0"
edition = "2024"
autoexamples = false

[dependencies]
cosmic-text = "0.19.0"
thiserror = "2.0.18"
ui_layout = "0.9.8"

[target.'cfg(target_os = "linux")'.dependencies]
winit = {
    version = "0.30.13",
    default-features = false,
    features = [
        "wayland",
        "wayland-dlopen",
        "rwh_06",
    ],
}
softbuffer = {
    version = "0.4.8",
    default-features = false,
    features = ["wayland", "wayland-dlopen"],
}
tiny-skia = "0.12.0"

thiserror = "2"

[lib]
name = "viewkit"
crate-type = ["cdylib", "rlib", "staticlib"]

[[example]]
name = "button"
path = "examples/button.rs"

[[example]]
name = "text"
path = "examples/text.rs"

[[example]]
name = "scroll"
path = "examples/scroll.rs"

[[example]]
name = "border"
path = "examples/border.rs"

[[example]]
name = "text_field"
path = "examples/text_field.rs"

[[example]]
name = "all"
path = "examples/all.rs"
